Initial Test Push
Testing initial push to adjust Twitter Widget live

--- a/contact.twig
+++ b/contact.twig
@@ -1,12 +1,9 @@
 {% extends "layout.twig" %}
-
 {% block content %}
 
-<div class="home">
-	{% include "header.twig" %}
-</div>
+{% include "header.twig" %}
 
-<section class="section main home-page">
+<section class="section main contact-page">
 	{{zone('main')|raw}}
 </section>
 
