--- a/layout.twig
+++ b/layout.twig
@@ -1,64 +1,46 @@
 <!doctype html>
-<!--[if lt IE 7]>
-	<html class="no-js ie6 oldie" lang="en">
-<![endif]-->
-<!--[if IE 7]>
-	<html class="no-js ie7 oldie" lang="en">
-<![endif]-->
-<!--[if IE 8]>
-	<html class="no-js ie8 oldie" lang="en">
-<![endif]-->
-<!--[if gt IE 8]><!-->
-	<html class="no-js" lang="{{ page.seoLang }}">
-<!--<![endif]-->
-<head>
-	<meta charset="utf-8" />
-	<title>{{ page.title }}</title>
-	<meta name="keywords" content="{{ page.keywords }}" />
-	<meta name="description" content="{{ page.description }}" />
-	<meta http-equiv="content-language" content="{{ page.seoLang }}" />
-	{% if site.favicon %}
-		<link rel="icon" href="{{ site.favicon['favicon'] }}" type="image/x-icon" />
-		<link rel="SHORTCUT ICON" href="{{ site.favicon['thumbnail'] }}?v={{ "now"|date("U") }}" type="image/x-icon" />
-	{% endif %}
-	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-	<meta name="viewport" content="width=device-width,initial-scale=1">
+<html lang="{{ page.seoLang }}">
 
-	{% include basekit.headScript %}
-</head>
-<body class="{{ page.backgroundClass }}">
+	<head>
+	
+		{% include "head.twig" %}
+		
+		{% include basekit.headScript %}
 
-	{% block content %}
-	{% endblock %}
-	{% include basekit.bodyScript %}
-<script type="text/javascript">
-	! function () {
-	    function supportsSVG() {
-	        return !!document.createElementNS && !! document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect
-	    }
-	    if (supportsSVG()) document.documentElement.className += ' svg'
-	}()
-</script>
+	</head>
 
-<script>
-  (function() {
-    var $body = document.body
-    , $menu_trigger = $body.getElementsByClassName('pull')[0];
+	<body id="image-fixed" class="{{ page.backgroundClass }} {{ site.colorSwatch }}">
 
-    if ( typeof $menu_trigger !== 'undefined' ) {
-      $menu_trigger.addEventListener('click', function() {
-        $body.className = ( $body.className == 'menu-active' )? '' : 'menu-active';
-      });
-    }
-  }).call(this);
-</script>
+		<div class="clearfix page-wrap">
 
-<script type="text/javascript">
-	$(".widget.feature").css("height", $(window).height());
-	$(window).bind("resize",function() {
-	    $(".widget.feature").css("height", $(window).height());
-	});
-</script>
+			{% block content %}
+			{% endblock %}
 
-</body>
+			{% include "footer.twig" %}
+
+		</div>
+		{% include basekit.bodyScript %}
+
+		<script type="text/javascript">
+			var headerHeight = document.getElementById("header-feature").offsetHeight,
+				feature = $(".header-feature .widget.feature")[0],
+				innerFeature = $(".header-feature .widget.feature .feature-bgimg")[0];
+				
+			window.onscroll = function emParallax() {
+				if(typeof feature === 'object') {
+					feature.style.height = ((window.pageYOffset / 20) * 60) + headerHeight + "px";
+					innerFeature.style.height = ((window.pageYOffset / 20) * 60) + headerHeight + "px";
+				}
+			}
+
+			!function() {
+				function supportsSVG() {
+					return !!document.createElementNS && !! document.createElementNS('http://www.w3.org/2000/svg', 'svg').createSVGRect
+				}
+				if (supportsSVG()) document.documentElement.className += ' svg'
+			}();
+
+		</script>
+
+	</body>
 </html>
