--- a/home.twig
+++ b/home.twig
@@ -1,9 +1,12 @@
 {% extends "layout.twig" %}
+
 {% block content %}
 
-{% include "header.twig" %}
+<div class="home">
+	{% include "header.twig" %}
+</div>
 
-<section class="section main default-page">
+<section class="section main home-page">
 	{{zone('main')|raw}}
 </section>
 
