--- a/stylesheet.less
+++ b/stylesheet.less
@@ -247,6 +247,24 @@ hr.line {
 			line-height: bkscale(@font-swatch1-line-height, 0.75);
 		}
 	}
+		button {
+		border: 2px solid fade(white, 35%);
+		background: transparent;
+		border-radius: 30px 0;
+		padding: 12px 25px 10px;
+		margin-top: 15px;
+		&:hover {
+			background-color: white;
+			color: black;
+			.transition( all, 0.75s, ease);
+		}
+		@media @mobile {
+			padding: 8px 20px;
+			margin-bottom: 40px;
+		}
+		span {
+			vertical-align: text-bottom;
+		}
 	.widget.companyname a {
 		color: @color-swatch1;
 		font-size: @font-swatch10-font-size;
