Feature Button Update

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -256,7 +256,6 @@ hr.line {
 		&:hover {
 			background-color: white;
 			color: black;
-			.transition( all, 0.75s, ease);
 		}
 		@media @mobile {
 			padding: 8px 20px;
@@ -265,6 +264,7 @@ hr.line {
 		span {
 			vertical-align: text-bottom;
 		}
+	}
 	.widget.companyname a {
 		color: @color-swatch1;
 		font-size: @font-swatch10-font-size;
