--- a/stylesheet.less
+++ b/stylesheet.less
@@ -955,7 +955,7 @@ input[type="search"]::-webkit-search-decoration {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 4px;
-    text-align:center;
+    text-align: left;
     margin-bottom:20px;
 }
 
