--- a/header.twig
+++ b/header.twig
@@ -1,10 +1,21 @@
-<header class="bk-header clearfix">
-	<aside class="template-aside left">
-		{{widget('companyname', 'companyname', {"business": "profile"})|raw}}
-	</aside>
-	<aside class="template-aside right">
-		{{widget('extendednavigation', 'header-nav', {"align":"right"})|raw}}
-	</aside>
+<header class="template-header">
+	<div class="header-feature">
+		<div id="header-fixed">
+			<aside class="template-aside left">
+				<h2>{{widget('profile', 'lefttopwidget', { 'profileType': 'socialicons' })|raw}}</h2>
+			</aside>
+			<aside class="template-aside right">
+				<h2>{{widget('profile', 'righttopwidget', { 'profileType': 'strapline' })|raw}}</h2>
+			</aside>
+		</div>
+		<div id="parallax" class="template-logo">
+			{{widget('logo', 'logo', {"defaultlogo": asset('img/logo.png')})|raw}}
+			<h1>{{widget('companyname', 'companyname', {"business": "Lorem Ipsum"})|raw}}</h1>
+		</div>
+	</div>
 </header>
 
 <div class="main-wrap">
+	<nav class="template-nav">
+		{{widget('extendednavigation', 'navigationheader', {})|raw}}
+	</nav>
