--- a/menu.twig
+++ b/menu.twig
@@ -1,10 +1,9 @@
 {% extends "layout.twig" %}
 {% block content %}
 
-{% include "header.twig" %}
-
 <section class="section main menu-page">
-	{{zone('main')|raw}}
+	{{widget('menusections', 'menusections1', {})|raw}}
+	{{widget('menu', 'menu1', {})|raw}}
 </section>
 
 {% endblock %}
