--- a/header.twig
+++ b/header.twig
@@ -5,12 +5,14 @@
 				<h2>{{widget('profile', 'lefttopwidget', { 'profileType': 'socialicons' })|raw}}</h2>
 			</aside>
 			<aside class="template-aside right">
-				<h2>{{widget('profile', 'righttopwidget', { 'profileType': 'strapline' })|raw}}</h2>
+				{{widget('extendednavigation', 'navigationheader', {})|raw}}
+		
 			</aside>
 		</div>
 		<div id="parallax" class="template-logo">
 			{{widget('logo', 'logo', {"defaultlogo": asset('img/logo.png')})|raw}}
 			<h1>{{widget('companyname', 'companyname', {"business": "Lorem Ipsum"})|raw}}</h1>
+			<h2>{{widget('profile', 'righttopwidget', { 'profileType': 'strapline' })|raw}}</h2>
 		</div>
 	</div>
 </header>
