--- a/stylesheet.less
+++ b/stylesheet.less
@@ -238,6 +238,8 @@ hr.line {
 	}
 	.widget.companyname a {
 		color: @color-swatch1;
+		font-size: 52px;
+		font-weight: 600;
 	}
 }
 
@@ -250,7 +252,7 @@ hr.line {
 .header-feature {
 	position: relative;
 	overflow: hidden;
-	height: 540px;
+	height: 580px;
 	border-bottom-width: 0;
 	.logo img {
 		max-width: 100%;
@@ -266,7 +268,7 @@ hr.line {
 
 
 #parallax {
-	margin-top: 200px;
+	margin-top: 250px;
 	position: absolute;
 	width: 100%;
 	text-align: center;
@@ -307,10 +309,9 @@ hr.line {
 }
 
 .widget .extendednavigation {
-	text-align: center;
+	text-align: right;
 	float: left;
 	width: 100%;
-	border-bottom: 1px solid lighten(@font-swatch6-color, 35%);
 }
 
 .widget .extendednavigation ul {
@@ -319,7 +320,7 @@ hr.line {
 	float: none;
 	li {
 		float: none;
-		text-align: center;
+		text-align: right;
 		display: inline-block;
 		a, > .text {
 			padding: 10px 20px;
@@ -543,23 +544,83 @@ button.btn,
 .widget.profile .bk-profile-socialicons span a,
 .template-footer .widget.profile .bk-profile-socialicons span a {
 	-webkit-font-smoothing: inherit;
-	border: 1px solid @color-swatch3;
 	border-radius: 2px;
 	color: @font-swatch7-color;
-	background-color: lighten(@color-swatch3, 5%);
+	background-color: @color-swatch1;
 	line-height:@font-swatch5-line-height;
 	font-size:@font-swatch5-font-size;
 	font-family:@font-swatch5-font-family;
 	cursor: pointer;
+	border-radius: 10px 0 10px;
 	&:hover {
-		background-color: @color-swatch3;
+		background-color: @color-swatch1;
 	}
 }
+
+
 
 .widget.socialicons span a,
 .widget.profile .bk-profile-socialicons span a,
 .template-footer .widget.profile .bk-profile-socialicons span a	{
-	border-radius: 100%;
+	display: inline-block;
+	margin-right: 2px;
+	margin-bottom: 6px;
+	background-size: 18px;
+	width: 34px;
+	height: 34px;
+	background-repeat: no-repeat;
+	background-position: center;
+}
+
+.svg {
+	.bk-socialicons-linkedin {
+		a {
+			background-image: image('/img/social/socialicons-linkedin.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-linkedin.svg');
+			}
+		}
+	}
+	.bk-socialicons-twitter {
+		a {
+			background-image: image('/img/social/socialicons-twitter.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-twitter.svg');
+			}
+		}
+	}
+	.bk-socialicons-facebook {
+		a {
+			background-image: image('/img/social/socialicons-facebook.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-facebook.svg');
+			}
+		}
+	}
+	.bk-socialicons-rss {
+		a {
+			background-image: image('/img/social/socialicons-rss.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-rss.svg');
+			}
+		}
+	}
+	.bk-socialicons-googleplus {
+		a {
+			background-image: image('/img/social/socialicons-googleplus.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-googleplus.svg');
+			}
+		}
+	}
+	.bk-socialicons-youtube {
+		a {
+			background-image: image('/img/social/socialicons-youtube-hover.svg');
+			&:hover {
+				background-image: image('/img/social/socialicons-youtube-hover.svg');
+			}
+		}
+	}
 }
 
 .clicktocall a,
