--- a/stylesheet.less
+++ b/stylesheet.less
@@ -235,16 +235,19 @@ hr.line {
 	h1, h2 {
 		color: @color-swatch1;
 		font-weight: 200;
+
 	}
 	.widget.companyname a {
 		color: @color-swatch1;
 		font-size: 52px;
 		font-weight: 600;
+		@media @mobile {
+	     font-size: 26px;
+    }
 	}
 }
 
 .template-aside {
-	width: 50%;
 	padding: 20px 25px;
 	float: left
 }
@@ -337,7 +340,7 @@ hr.line {
 	}
 	li.folder:hover {
 		ul {
-			border: 1px solid lighten(@font-swatch6-color, 35%);
+			background-color: @color-swatch2;
 			border-top: none;
 		}
 	}
@@ -423,7 +426,7 @@ hr.line {
 .menu-subsection,
 .menu-item-promoted,
 .blog-post-metadata {
-	background-color: lighten(@color-swatch2, 62%);
+	background-color: lighten(@color-swatch2, 80%);
 	border-radius: 2px;
 }
 
@@ -539,21 +542,19 @@ button.btn,
 .widget.dropbox button,
 .clicktocall a,
 .signupform fieldset button,
-.blog-search-form button,
-.widget.socialicons span a,
-.widget.profile .bk-profile-socialicons span a,
-.template-footer .widget.profile .bk-profile-socialicons span a {
+.blog-search-form button, {
 	-webkit-font-smoothing: inherit;
 	border-radius: 2px;
 	color: @font-swatch7-color;
-	background-color: @color-swatch1;
+	background-color: @color-swatch3;
 	line-height:@font-swatch5-line-height;
 	font-size:@font-swatch5-font-size;
 	font-family:@font-swatch5-font-family;
 	cursor: pointer;
 	border-radius: 10px 0 10px;
+	border: none;
 	&:hover {
-		background-color: @color-swatch1;
+		background-color: darken(@color-swatch3, 10%);
 	}
 }
 
@@ -562,14 +563,19 @@ button.btn,
 .widget.socialicons span a,
 .widget.profile .bk-profile-socialicons span a,
 .template-footer .widget.profile .bk-profile-socialicons span a	{
+	background-color: @color-swatch1;
 	display: inline-block;
 	margin-right: 2px;
 	margin-bottom: 6px;
 	background-size: 18px;
+	border-radius: 10px 0 10px;
 	width: 34px;
 	height: 34px;
 	background-repeat: no-repeat;
 	background-position: center;
+	&:hover {
+		background-color:lighten(@color-swatch3,60%);
+	}
 }
 
 .svg {
@@ -841,11 +847,11 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .widget.ecomproductslist .ecom-productslist-products .productlist-filter .productlist-display-form .productlist-search button.btn {
-    position: relative;
-    top: -1px;
-    height: 38px;
+    position: absolute;
+    height: 48px;
+    background-color: @color-swatch3;
     &:hover {
-        background-color: @font-swatch7-background-color-hover;
+        background-color: darken(@color-swatch3,10%);
     }
 }
 
@@ -855,7 +861,6 @@ input[type="search"]::-webkit-search-decoration {
  select {
     -moz-appearance: none;
     text-indent: 0.01px;
-    -webkit-appearance: none;
     text-overflow: '';
     cursor: pointer;
     position: relative;
@@ -872,14 +877,13 @@ input[type="search"]::-webkit-search-decoration {
     webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
-    border: 1px solid darken(@color-swatch2, 10%);
+    border: 1px solid lighten(@color-swatch2, 60%);
     background-color: lighten(@color-swatch7, 3%);
     padding: 8px 38px 8px 14px;
     text-indent: 0;
     letter-spacing: 0;
     float: none;
     height: 41px;
-    background-image: image('/images/ui-select-arrow.png');
 
     @media @mobile {
       display: block;
@@ -888,14 +892,13 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 .widget.ecomproduct .ecom-product .ecom-product-info .ecom-product-variation select {
-    -webkit-appearance: none;
     width: 100%;
     margin-bottom: 20px;
 }
 
 .widget.ecombasket .ecombasket-pull {
     border-radius: 5px;
-    box-shadow: 0px 2px 0px darken(@color-swatch3,10%);
+    background-color: @color-swatch3;
 }
 
 .ecom-product-preview-image-wrap {
@@ -993,6 +996,7 @@ input[type="search"]::-webkit-search-decoration {
         margin-top: 8px;
         .basket-summary-quantity-text {
             display: block;
+            border-radius: 0;
             padding: 0;
             font-family: @font-swatch4-font-family;
             color: @font-swatch4-color;
@@ -1006,13 +1010,13 @@ input[type="search"]::-webkit-search-decoration {
             font-size: 14px;
         }
         button {
-            width: 20px;
-            height: 20px;
+            width: 24px;
+            height: 24px;
             padding: 0;
             margin: 0;
-            border: 0;
+            border-radius: 0;
             box-shadow: none;
-            background-color: lighten(@color-swatch5,15%);
+            background-color: lighten(@color-swatch5,45%);
             font-family: inherit;
             color: @color-swatch1;
             &:hover {
@@ -1150,7 +1154,8 @@ input[type="search"]::-webkit-search-decoration {
 @media @tablet {
 	.header-feature,
 	.home .header-feature {
-		height: 255px;
+
+		height: 305px;
 		.logo img {
 			max-width: 100%;
 		}
