--- a/stylesheet.less
+++ b/stylesheet.less
@@ -221,6 +221,7 @@ hr.line {
 	position: relative;
 	.template-aside {
 		position: absolute;
+	
 	}
 	.left {
 		top: 0;
@@ -236,7 +237,7 @@ hr.line {
 		color: @color-swatch1;
 		font-weight: 200;
 		@media @tablet {
-	     line-height: 18px;
+	     line-height: 19px;
     }
 
 	}
@@ -271,6 +272,10 @@ hr.line {
 	}
 }
 
+.featurebutton .widget.button button {
+	background-color: red;
+}
+
 #header-fixed {
 	width: 100%;
 	height: 100%;
@@ -280,7 +285,7 @@ hr.line {
 
 
 #parallax {
-	margin-top: 250px;
+	margin-top: 220px;
 	position: absolute;
 	width: 100%;
 	text-align: center;
@@ -318,6 +323,8 @@ hr.line {
 	float: left;
 	width: 100%;
 	min-height: 49px;
+	border-bottom: 1px solid darken(@color-swatch1, 10%);
+
 }
 
 .widget .extendednavigation {
@@ -349,8 +356,8 @@ hr.line {
 	}
 	li.folder:hover {
 		ul {
-			background-color: @color-swatch2;
-			border-top: none;
+			background-color: @color-swatch1;
+			border: 1px solid lighten(@color-swatch2,40%);
 		}
 	}
 }
@@ -650,7 +657,6 @@ div.twitter-profile-pic {
 .widget.profile form button,
 .signupform fieldset button {
 	padding: 8px 14px;
-	margin: 0;
 }
 
 input[type="search"]::-webkit-search-decoration {
