--- a/stylesheet.less
+++ b/stylesheet.less
@@ -297,7 +297,7 @@ hr.line {
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: .1em;
-	
+	color: @color-swatch2;
 	position: relative;
 	text-align: center;
 	padding: 0 20px;
@@ -863,6 +863,7 @@ input[type="search"]::-webkit-search-decoration {
       .productlist-item-count {
         text-align: center;
         clear: both;
+        margin-top: 40px;
       }
     }
   }
