--- a/stylesheet.less
+++ b/stylesheet.less
@@ -297,7 +297,7 @@ hr.line {
 	font-family: 'Oswald', sans-serif;
 	text-transform: uppercase;
 	letter-spacing: .1em;
-	color: @color-swatch2;
+	color: @font-swatch5-color;
 	position: relative;
 	text-align: center;
 	padding: 0 20px;
@@ -319,6 +319,7 @@ hr.line {
 }
 
 .template-nav {
+	color: @font-swatch5-color;
 	padding: 0 20px;
 	float: left;
 	width: 100%;
@@ -328,12 +329,14 @@ hr.line {
 }
 
 .widget .extendednavigation {
+	color: @font-swatch5-color;
 	text-align: right;
 	float: left;
 	width: 100%;
 }
 
 .widget .extendednavigation ul {
+	color: @font-swatch5-color;
 	max-width: 1000px;
 	margin: 0 auto;
 	float: none;
