Linked company name with correct swatches.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -251,12 +251,12 @@ hr.line {
     	}
     }
 	.widget.companyname a {
-		color: @color-swatch1;
+		color: @font-swatch10-color;
 		font-size: 52px;
 		font-weight: 600;
 		@media @tablet {
 			font-size: 22px;
-			line-height: 18px;
+			line-height: 26px;
        }
 	}
 }
