Linked company name font styles to the correct swatch.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -241,7 +241,7 @@ hr.line {
 		color: @color-swatch1;
 		font-weight: 200;
 		@media @tablet {
-	     line-height: 19px;
+	     	line-height: 26px;
    		 }
    	}
     h2 {
@@ -252,8 +252,10 @@ hr.line {
     }
 	.widget.companyname a {
 		color: @font-swatch10-color;
+		font-family: @font-swatch10-font-family;
 		font-size: 52px;
 		font-weight: 600;
+		line-height: @font-swatch10-line-height;
 		@media @tablet {
 			font-size: 22px;
 			line-height: 26px;
