Removed double semi colon.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -73,7 +73,6 @@ body {
 
 html, body {
 	background-color: @color-swatch1;
-	
 	font-family:@font-swatch5-font-family;
 	font-weight: @font-swatch5-font-weight;
 	color:@font-swatch5-color;
@@ -212,7 +211,7 @@ a {
 }
 
 hr.line {
-	background-color: lighten(@color-swatch5, 75%)
+	background-color: lighten(@color-swatch5, 75%);
 }
 
 // 2. Header
@@ -225,7 +224,6 @@ hr.line {
 	position: relative;
 	.template-aside {
 		position: absolute;
-	
 	}
 	.left {
 		top: 0;
@@ -263,7 +261,7 @@ hr.line {
 	}
 }
 
-.widget.logo,.widget.companyname, .widget.profile {
+.widget.logo, .widget.companyname, .widget.profile {
 	margin: 0 auto;
 	max-width: 1000px;
 	position: relative;
@@ -276,7 +274,7 @@ hr.line {
 }
 
 .template-header .left {
-	padding: 30px 25px;;
+	padding: 30px 25px;
 }
 
 .header-feature {
@@ -836,6 +834,7 @@ input[type="search"]::-webkit-search-decoration {
 }
 
 // 10. Footer
+
 .template-footer {
 	margin: 0 20px;
 	border-top: 1px solid darken(@color-swatch1, 10%);
@@ -846,9 +845,7 @@ input[type="search"]::-webkit-search-decoration {
 	margin: 0 auto;
 }
 
-// 12. eCom
-
-
+// 11. eCom
 
 .widget.ecomproductslist {
   .ecom-productslist-products {
