Changed semi colon to colon.

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -251,8 +251,8 @@ hr.line {
 	.widget.companyname a {
 		color: @font-swatch10-color;
 		font-family: @font-swatch10-font-family;
-		font-size: 52px;
-		font-weight: 600;
+		font-size: @font-swatch10-font-size;
+		font-weight: @font-swatch10-font-weight;
 		line-height: @font-swatch10-line-height;
 		@media @tablet {
 			font-size: 22px;
@@ -1248,6 +1248,6 @@ input[type="search"]::-webkit-search-decoration {
 @media @mobile {
 	#parallax {
 		padding-left: 20px;
-		padding-right; 20px;
+		padding-right: 20px;
 	}
 }
