Added main zone to blog post list page

--- a/blogpostlist.twig
+++ b/blogpostlist.twig
@@ -2,7 +2,7 @@
 {% block content %}
 
 <section class="section main bloglist-page">
-	{{widget('blogpostlist', 'blogpostlist1', {})|raw}}
+	{{zone('main')|raw}}
 </section>
 
 {% endblock %}
