--- a/blogpost.twig
+++ b/blogpost.twig
@@ -2,7 +2,7 @@
 {% block content %}
 
 <section class="section main blogpost-page">
-	{{widget('blogpost', 'blogpost1', {})|raw}}
+	{{zone('main')|raw}}
 </section>
 
 {% endblock %}
