--- a/stylesheet.less
+++ b/stylesheet.less
@@ -669,6 +669,26 @@ div.twitter-profile-pic {
 	}
 }
 
+.svg .widget.socialicons span.bk-socialicons-instagram a,
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/img/social/socialicons-instagram.svg')
+}
+
+.svg .widget.socialicons span.bk-socialicons-pinterest a,
+.svg .widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/img/social/socialicons-pinterest.svg')
+}
+
+.widget.socialicons span.bk-socialicons-instagram a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-instagram a {
+    background-image: image('/img/social/socialicons-instagram.png')
+}
+
+.widget.socialicons span.bk-socialicons-pinterest a,
+.widget.profile .bk-profile-socialicons span.bk-socialicons-pinterest a {
+    background-image: image('/img/social/socialicons-pinterest.png')
+}
+
 .clicktocall a,
 .blog-search-form button,
 .widget.profile form button,
