--- a/stylesheet.less
+++ b/stylesheet.less
@@ -64,7 +64,7 @@ html {
 }
 body {
 	min-height:100%;
-	background-image: image('/img/header-bg.jpg') no-repeat center top;
+	background: image('/img/header-bg.jpg') no-repeat center top;
 	background-size: 100% auto;
 	@media @mobile {
 		background-size: cover;
