Started migration layout alterations

--- a/layout.twig
+++ b/layout.twig
@@ -2,30 +2,24 @@
 <html lang="{{ page.seoLang }}">
 
 	<head>
-	
 		{% include "head.twig" %}
-		
 		{% include basekit.headScript %}
-
 	</head>
 
-	<body id="image-fixed" class="{{ page.backgroundClass }} {{ site.colorSwatch }}">
-
+	<body id="image-fixed" class="{{ page.backgroundClass }} {{ site.colorSwatch }} {{ isV10sSite ? 'id="migrated-site"' : '' }}">
 		<div class="page-wrap">
-		
 			{% include "header.twig" %}
 			
 			{% block content %}
 			{% endblock %}
 
 			{% include "footer.twig" %}
-
 		</div>
 
 		{% include basekit.bodyScript %}
 
 		<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
-		<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>')</script>
+		<script>window.jQuery || document.write('<script src="{{ asset('libs/jquery-1.10.2.min.js')}}"><\/script>');</script>
 
 		<script type="text/javascript">
 			!function() {
