--- a/stylesheet.less
+++ b/stylesheet.less
@@ -274,8 +274,9 @@ hr.line {
 
 .template-aside {
 	padding: 20px 25px;
-	float: left;
-	width: 50%;
+	display: inline-block;
+	vertical-align: top;
+	width: calc(50% - 4px);
 }
 
 .template-header .left {
@@ -341,7 +342,6 @@ hr.line {
 .template-nav {
 	color: @font-swatch5-color;
 	padding: 0 20px;
-	float: left;
 	width: 100%;
 	min-height: 49px;
 	border-bottom: 1px solid darken(@color-swatch1, 10%);
@@ -351,7 +351,6 @@ hr.line {
 .widget .extendednavigation {
 	color: @font-swatch5-color;
 	text-align: right;
-	float: left;
 	width: 100%;
 }
 
@@ -855,12 +854,12 @@ input[type="search"]::-webkit-search-decoration {
 // 10. Footer
 
 .template-footer {
-	margin: 0 20px;
+	margin: 0;
 	border-top: 1px solid darken(@color-swatch1, 10%);
 }
 
 .footer-content {
-	max-width: 1010px;
+	max-width: 1000px;
 	margin: 0 auto;
 }
 
@@ -1252,7 +1251,6 @@ input[type="search"]::-webkit-search-decoration {
 		border-bottom: 1px solid darken(@color-swatch1, 10%);
 		margin: 0 20px;
 		padding: 0;
-		float: none;
 		width: auto;
 	}
 	.main-wrap {
