Layout fixes for migration

--- a/migration/migration.less
+++ b/migration/migration.less
@@ -33,7 +33,7 @@
     .empty-zone,
     #page-zones__main:empty,
     .site-width-container,
-    #page-zones__main > .widget:not(.row),
+    #page-zones__main > .widget:not([data-name="row"]),
     .row:not(.widget):not(.row--width-no-padding) .row__container {
         margin-left: auto;
         margin-right: auto;
@@ -45,37 +45,32 @@
 
 
     // Move spacing to first widget in the main zone (not sections)
-    &.edit #page-zones__main-overlay + .widget:not(.row),
-    #page-zones__main > .widget:not(.row):first-child {
+    &.edit #page-zones__main-overlay + .widget:not([data-name="row"]),
+    #page-zones__main > .widget:not([data-name="row"]):first-child {
         margin-top: @spacing__first--desktop;
     }
 
 
     // Move spacing to last widget in the main zone (not sections)
-    #page-zones__main > .widget:not(.row):last-child {
+    #page-zones__main > .widget:not([data-name="row"]):last-child {
         margin-bottom: @spacing__first--desktop;
     }
 
 
-    // Add spacing to the top of a widget when it follows a section
-    #page-zones__main > .row + .widget:not(.row) {
+    // Add spacing to the top of a widget or section when it follows a widget / section
+    #page-zones__main > [data-name="row"] + .widget:not([data-name="row"]),
+    #page-zones__main > .widget:not([data-name="row"]) + [data-name="row"] {
         margin-top: @widget__spacing--other;
     }
 
 
-    // Adds spacing to the section when a widget is before it
-    #page-zones__main > .widget:not(.row) + .row {
+    #page-zones__main > [data-name="row"] + .widget:not(.row) {
         margin-bottom: @widget__spacing--other;
-        margin-top: @widget__spacing--other;
-
-        &:not(:last-child) {
-             margin-bottom: 0;
-        }
     }
 
 
     // Remove spacing if widget follows a light section
-    #page-zones__main > .row.style--light + .widget:not(.row) {
+    #page-zones__main > [data-name="row"].style--light + .widget:not([data-name="row"]) {
         margin-top: 0;
     }
 }
