--- a/stylesheet.less
+++ b/stylesheet.less
@@ -273,7 +273,7 @@ hr.line {
 }
 
 .template-aside {
-	padding: 20px 25px;
+	padding: 20px;
 	display: inline-block;
 	vertical-align: top;
 	width: calc(50% - 4px);
@@ -1226,7 +1226,7 @@ input[type="search"]::-webkit-search-decoration {
 		float: left;
 		.template-aside {
 			width: 100%;
-			padding: 20px 0 0 0;
+			padding: 20px 20px 0;
 		}
 	}
 	.widget .extendednavigation ul li a, .widget .extendednavigation ul li > .text,
